Changed the check that checks whether an article is new.